RESOLVED FIXED198884
[LFC[MarginCollapsing] Anonymous boxes never collapse their margins with siblings.
https://bugs.webkit.org/show_bug.cgi?id=198884
Summary [LFC[MarginCollapsing] Anonymous boxes never collapse their margins with sibl...
alan
Reported 2019-06-15 00:57:43 PDT
ssia
Attachments
Patch (1.67 KB, patch)
2019-06-15 01:00 PDT, alan
no flags
Radar WebKit Bug Importer
Comment 1 2019-06-15 00:59:23 PDT
alan
Comment 2 2019-06-15 01:00:26 PDT
WebKit Commit Bot
Comment 3 2019-06-15 07:14:01 PDT
Comment on attachment 372186 [details] Patch Clearing flags on attachment: 372186 Committed r246462: <https://trac.webkit.org/changeset/246462>
WebKit Commit Bot
Comment 4 2019-06-15 07:14:03 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.