[LFC[MarginCollapsing] Anonymous boxes never collapse their margins with siblings. https://bugs.webkit.org/show_bug.cgi?id=198884 <rdar://problem/51773509>

Reviewed by Antti Koivisto.

* layout/blockformatting/BlockMarginCollapse.cpp:
(WebCore::Layout::BlockFormattingContext::MarginCollapse::marginBeforeCollapsesWithPreviousSiblingMarginAfter):


Canonical link: https://commits.webkit.org/212856@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246462 268f45cc-cd09-0410-ab3c-d52691b4dbfc